5166 ONLY avoid break in injected exercises os-prefix (#273)
* fix?

* Update CHANGELOG.md

--- a/styles/designs/common/pdf/_page-breaks.scss
+++ b/styles/designs/common/pdf/_page-breaks.scss
@@ -113,14 +113,8 @@ p.has-noteref {
   }
 }
 
-.os-eoc {
-  > section > [data-type="injected-exercise"] {
-    page-break-inside: avoid;
-  }
-}
-
 .os-eos {
-  > section.section-exercises [data-type="injected-exercise"] {
+  > section [data-type="injected-exercise"] > [data-type="exercise-question"] > .os-prefix{
     page-break-inside: avoid;
   }
 }
